# hyveman-web/openapi/openapi.json
@@ -3940,6 +3940,15 @@
             ],
             "format": "int64"
           },
+          "autoResolveAfterS": {
+            "pattern": "^-?(?:0|[1-9]\\d*)$",
+            "type": [
+              "null",
+              "integer",
+              "string"
+            ],
+            "format": "int64"
+          },
           "enabled": {
             "type": "boolean"
           },
@@ -3987,6 +3996,15 @@
             ]
           },
           "cooldownS": {
+            "pattern": "^-?(?:0|[1-9]\\d*)$",
+            "type": [
+              "null",
+              "integer",
+              "string"
+            ],
+            "format": "int64"
+          },
+          "autoResolveAfterS": {
             "pattern": "^-?(?:0|[1-9]\\d*)$",
             "type": [
               "null",
